Release 20250712